...
        source={require('../../assets/image/onboarding-gateway.png')}
        fadeDuration={0}
        resizeMode="contain"
        style={styles.img}
      />
      <OWButton
        testID="get_started_id"
        label="Get started!"
        onPress={onGetStarted}
        disabled={isTimedOut}
        loading={isTimedOut}
      />
    </View>
...
