...
  const renderItem = ({ item }) => {
    return <View>{item.component}</View>;
  };
  const styles = styling();
  return (
    <PageWithScrollView backgroundColor="white">
      <View testID='welcome_id' style={[{ ...styles.onBoardingRoot }, { paddingTop: 50 }]}>
        <AppIntroSlider
          renderItem={renderItem}
          data={slides}
          showNextButton={false}
          dotStyle={{ backgroundColor: colors['purple-100'], marginTop: 60 }}
          activeDotStyle={{
...
