...
        style={styles.btnOW}
        label="Import Ledger Nano X"
        onPress={handleImportLedgerNanoX}
        type="secondary"
      />
      <OWButton
      testID="import_wallet"
        style={styles.btnOW}
        label="Import from Mnemonic / Private key"
        onPress={handleImportFromMnemonic}
        type="secondary"
      />
    </PageWithScrollView>
...
